url list, fixes, validation

--- a/UrlShortener.Exceptions/UrlShortener.Exceptions.csproj
+++ b/UrlShortener.Exceptions/UrlShortener.Exceptions.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DuplicatedSegmentException.cs" />
+    <Compile Include="NotExistingUrlException.cs" />
     <Compile Include="NotFoundShortUrlException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
