--- a/UrlShortener.Data/UrlShortener.Data.csproj
+++ b/UrlShortener.Data/UrlShortener.Data.csproj
@@ -38,6 +38,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Xml.Linq" />
@@ -47,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configurator.cs" />
     <Compile Include="Migrations\201607251859305_InitialCreate.cs" />
     <Compile Include="Migrations\201607251859305_InitialCreate.Designer.cs">
       <DependentUpon>201607251859305_InitialCreate.cs</DependentUpon>
