--- a/UrlShortener.Web/Web.config
+++ b/UrlShortener.Web/Web.config
@@ -12,6 +12,7 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-UrlShortener-20160721223841;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-UrlShortener-20160721223841.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>-->
   <connectionStrings>
+    <!--<add name="ShortenerConnection" connectionString="Data Source=SQL5014.myWindowsHosting.com;Initial Catalog=DB_A0A8EF_shortener;User Id=DB_A0A8EF_shortener_admin;Password=shortener1;" providerName="System.Data.SqlClient" />-->
     <add name="ShortenerConnection" connectionString="Server=localhost;Database=db_shortener;Uid=sa;Password=sa;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
