--- a/UrlShortener.Web/packages.config
+++ b/UrlShortener.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngularJS.Core" version="1.5.7" targetFramework="net451" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="DotNetOpenAuth.AspNet" version="4.1.4.12333" targetFramework="net451" />
   <package id="DotNetOpenAuth.Core" version="4.1.4.12333" targetFramework="net451" />
@@ -10,7 +11,6 @@
   <package id="EntityFramework" version="5.0.0" targetFramework="net451" />
   <package id="jQuery" version="3.1.0" targetFramework="net451" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net451" />
-  <package id="jQuery.Validation" version="1.10.0" targetFramework="net451" />
   <package id="knockoutjs" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net451" />
@@ -28,7 +28,6 @@
   <package id="Microsoft.Data.Edm" version="5.2.0" targetFramework="net451" />
   <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net451" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.30506.0" targetFramework="net451" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.30506.0" targetFramework="net451" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
