--- a/UrlShortener.Tests/App.config
+++ b/UrlShortener.Tests/App.config
@@ -4,13 +4,17 @@
     that apply only to the Test project.
 -->
 <configuration>
-    <appSettings>
-
-    </appSettings>
-
-    <connectionStrings>
-
-    </connectionStrings>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <appSettings>
+    <add key="SegmentLength" value="7" />
+  </appSettings>
+  <connectionStrings>
+    <!--<add name="ShortenerConnection" connectionString="Data Source=SQL5014.myWindowsHosting.com;Initial Catalog=DB_A0A8EF_shortener;User Id=DB_A0A8EF_shortener_admin;Password=shortener1;" providerName="System.Data.SqlClient" />-->
+    <add name="ShortenerConnection" connectionString="Server=localhost;Database=db_shortener;Uid=sa;Password=sa;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -35,4 +39,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v12.0" />
+      </parameters>
+    </defaultConnectionFactory>
+  </entityFramework>
 </configuration>
