--- a/UrlShortener.Web/Web.config
+++ b/UrlShortener.Web/Web.config
@@ -21,6 +21,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="SegmentLength" value="7"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
