--- a/UrlShortener.Tests/App.template.config
+++ b/UrlShortener.Tests/App.template.config
@@ -12,7 +12,7 @@
     <add key="SegmentLength" value="7" />
   </appSettings>
   <connectionStrings>
-    <add name="ShortenerConnection" connectionString="Server=localhost;Database=db_shortener;Uid=sa;Password=sa;" providerName="System.Data.SqlClient" />
+    <add name="ShortenerConnection" connectionString="Server=your_server;Database=db_shortener;Uid=your_user;Password=your_password;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
