--- a/UrlShortener.Web/Web.template.config
+++ b/UrlShortener.Web/Web.template.config
@@ -8,12 +8,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <!--<connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-UrlShortener-20160721223841;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-UrlShortener-20160721223841.mdf" providerName="System.Data.SqlClient" />
-  </connectionStrings>-->
   <connectionStrings>
-    <add name="ShortenerConnection" connectionString="Data Source=SQL5014.myWindowsHosting.com;Initial Catalog=DB_A0A8EF_shortener;User Id=DB_A0A8EF_shortener_admin;Password=shortener1;" providerName="System.Data.SqlClient" />
-    <!--<add name="ShortenerConnection" connectionString="Server=localhost;Database=db_shortener;Uid=sa;Password=sa;" providerName="System.Data.SqlClient" />-->
+    <add name="ShortenerConnection" connectionString="Data Source=your_server;Initial Catalog=db_shortener;User Id=your_user;Password=your_password;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
